--- a/src/components/Recommendations/Recommendations.css
+++ b/src/components/Recommendations/Recommendations.css
@@ -1,16 +1,10 @@
-.analysis-section {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-}
-
 .recommendations {
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-    margin: 0 20px 0 10px;
+    box-sizing: border-box;
+    flex: 1 1 45%;
     padding: 20px;
     text-align: left;
-    width: 50%;
 }
 
 .recommendations ul {
